# composer-rs

./: .gitattributes  Cargo.toml  README.md  release-please-config.json
.github/workflows/: ci.yml  crates-publish.yml  release-please.yml
crates/composer-php-json/: CHANGELOG.md  Cargo.toml  README.md
crates/composer-php-json/src/: lib.rs
crates/composer-semver/: CHANGELOG.md  Cargo.toml  README.md
crates/composer-semver/src/: bound.rs  constraint.rs  lib.rs  stability.rs  version.rs
crates/composer-semver/tests/: conformance.rs
crates/composer-semver/tests/data/: conformance.json
crates/composer-wire/: CHANGELOG.md  Cargo.toml  README.md
crates/composer-wire/src/: document.rs  lib.rs  minify.rs
