[workspace]
# Shared Composer-domain crates for the cresset-tools family. Extracted
# so the `bougie` package manager and the `sconce` repository
# server/mirror consume one implementation of the Composer wire format
# and version algebra instead of each carrying its own (drifting) copy.
# `composer-semver` is the first tenant; `composer-wire` (the v2
# repository metadata types) is the expected next one.
resolver = "3"
members = ["crates/composer-php-json", "crates/composer-semver", "crates/composer-wire"]

[workspace.package]
version = "0.1.0" # x-release-please-version
edition = "2024"
rust-version = "1.95"
license = "EUPL-1.2"
authors = ["Jelle Besseling <jelle@pingiun.com>"]
repository = "https://github.com/cresset-tools/composer-rs"

# Intra-workspace deps centralized so members reference them with
# `{ workspace = true }`. Each carries both `path` (local builds) and a
# `version` (crates.io publish — cargo rejects a published crate whose
# deps lack a version). The trailing release-please marker lets the tool
# rewrite all of them in lockstep with `[workspace.package].version`.
[workspace.dependencies]
composer-php-json = { path = "crates/composer-php-json", version = "0.1.0" } # x-release-please-version
composer-semver = { path = "crates/composer-semver", version = "0.1.0" } # x-release-please-version
composer-wire = { path = "crates/composer-wire", version = "0.1.0" } # x-release-please-version

# Shared external deps.
regex = { version = "1.11", default-features = false, features = [
    "std",
    "perf",
    "unicode-perl",
    "unicode-case",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[workspace.lints.rust]
unsafe_code = "deny"
missing_debug_implementations = "warn"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"

[profile.release]
# Smaller, faster, no panic-unwinder — mirrors the family default.
codegen-units = 1
lto = "fat"
opt-level = 3
panic = "abort"
strip = "symbols"
