[package]
name = "composer-semver"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "A faithful Rust port of composer/semver: Composer-flavored Version, Constraint, and Stability — normalize, compare, and match version constraints."
readme = "README.md"
homepage = "https://github.com/cresset-tools/composer-rs"
documentation = "https://docs.rs/composer-semver"
keywords = ["composer", "semver", "php", "version", "constraint"]
categories = ["parser-implementations", "development-tools"]

[dependencies]
regex = { workspace = true }

[dev-dependencies]
serde = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true
